# haskell-through-diagrams

./: .ghci  .gitignore  README.md  haskell-through-diagrams.cabal
app/: Main.hs
src/Diagrams/: Book.hs
src/Diagrams/Book/: Chapter3.hs  Chapter3Solutions.hs  Chapter4.hs  Prelude.hs
