name:                haskell-through-diagrams
version:             0.1.0.0
synopsis:            haskell-through-diagrams examples and exercises
homepage:            https://github.com/lehmacdj/haskell-through-diagrams#readme
license:             BSD3
license-file:        LICENSE
author:              Devin Lehmacher
maintainer:          lehmacdj@gmail.com
copyright:           Copyright: (c) 2017 Devin Lehmacher
category:            Education
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , diagrams
                     , diagrams-lib
                     , diagrams-contrib
                     , diagrams-svg
                     , containers
                     , transformers
                     , mtl
                     , lens
                     , directory
  default-language:    Haskell2010
  default-extensions: NoMonomorphismRestriction
                    , FlexibleContexts
                    , TypeFamilies

executable hask-diagrams
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haskell-through-diagrams
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/lehmacdj/haskell-through-diagrams
